# Memo

./: CMakeLists.txt  resources.qrc  task_summary.txt
header files/: backgroundanimator.h  logincontrolwidget.h  loginformwidget.h  loginheaderwidget.h  loginwigets.h  registerformwidget.h  settingswidget.h  topbarwidget.h
source files/: backgroundanimator.cpp  logincontrolwidget.cpp  loginformwidget.cpp  loginheaderwidget.cpp  loginwigets.cpp  main.cpp  registerformwidget.cpp  settingswidget.cpp  topbarwidget.cpp
styles/: loginwidget.qss
